# aequitas-flow

./: CHANGELOG.md  README.md  old_readme.md  package-lock.json  pyproject.toml  rec_case_study.ipynb  renovate.json  requirements.txt
.github/workflows/: deploy.yml
aequitas_flow/: __init__.py  flow.py
flow/: __init__.py
tests/: __init__.py  test_flow.py
