[tool.poetry]
name = "flow"
version = "0.1"
description = "Part of the detection tools for aequitas"
authors = ["Mattias Brännström <mattias.brannstrom@umu.se>"]
license = "MIT"
readme = "README.md"

packages = [
    #{ include = "util" }
]

[tool.poetry.dependencies]
python = ">=3.9.0 <4.0.0"
ipython = "^8.0.0"
matplotlib = "^3.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.32.0"
poetry = "^2.0.0"
pytest = "^8.2.2"

[tool.poe.tasks]
test = "python -m unittest discover -v -s tests -p '*.py'"
coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
mypy = "mypy util tests"
compile = "python -m compileall util tests"

[tool.poetry.scripts]
flow = "util:main"  # Adjust the entry point as necessary

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.mypy]
ignore_missing_imports = true
